--- a/DeliveryOriginal/DeliveryOriginal.Admin/Views/Order/_OrderList.cshtml
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/Views/Order/_OrderList.cshtml
@@ -1,1 +1,18 @@
-﻿
+﻿@using DeliveryOriginal.Admin.Models
+@model List<OrderDetailsVM>
+
+<div>
+    @if (Model != null && Model.Count > 0)
+    {
+        foreach (OrderDetailsVM order in Model)
+        {
+            <div class="bordered-content">
+                @{ Html.RenderPartial("_OrderListItem", new ViewDataDictionary(order)); }
+            </div>
+        }
+    }
+    else
+    {
+        <div class="text-center">No Orders Have Been Found</div>
+    }
+</div>
