--- a/DeliveryOriginal/DeliveryOriginal.Admin/Views/Order/_OrderDetails.cshtml
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/Views/Order/_OrderDetails.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DeliveryOriginal.Admin.Models
-@using DeliveryOriginal.Admin.Extensions
+@using DeliveryOriginal.Admin.Core.Extensions
 @model OrderDetailsVM
 
 
