--- a/DeliveryOriginal/DeliveryOriginal.Admin/Views/Order/_OrderListItem.cshtml
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/Views/Order/_OrderListItem.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DeliveryOriginal.Admin.Models
-@using DeliveryOriginal.Admin.Extensions
+@using DeliveryOriginal.Admin.Core.Extensions
 @model OrderDetailsVM
 
 <div id="_@Model.Id" class="bordered-content order-list-item-container" onClick="loadDashboardOrderDetails(event, @Model.Id)">
