--- a/DeliveryOriginal/DeliveryOriginal.Admin/Views/Shared/_Layout.cshtml
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Order Dashboard", "OrderDashboard", "Order")</li>
                     <li>@Html.ActionLink("Dish Managment", "Index", "Dish")</li>
+                    <li>@Html.ActionLink("Category Managment", "Index", "Category")</li>
                     <li>@Html.ActionLink("User Managment", "Index", "User")</li>
                     <li>@Html.ActionLink("Analytics Panel", "Index", "Analytics")</li>
                 </ul>
