--- a/DeliveryOriginal/DeliveryOriginal.Admin/Views/Order/_OrderListItem.cshtml
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/Views/Order/_OrderListItem.cshtml
@@ -69,6 +69,9 @@
             success: function (data, textstatus) {
                 $('.details-partial').empty();
                 $('.details-partial').append(data);
+
+                $('.order-list-item-container').removeClass('order-list-item-container-selected');
+                $(`#_${id}`).addClass('order-list-item-container-selected');
             },
             error: function (XMLHttpRequest, textStatus, errorThrown) {
                 alert(errorThrown);
