feat: cook orders added

--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_main.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,8 @@
             android:layout_gravity="bottom"
             android:textAllCaps="false"
             android:padding="15dp"
-            android:onClick="log_out"/>
+            android:onClick="log_out"
+            />
 
     </com.google.android.material.navigation.NavigationView>
 
