--- a/DeliveryOriginal/DeliveryOriginal.Admin/Views/Order/_OrderDetails.cshtml
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/Views/Order/_OrderDetails.cshtml
@@ -50,7 +50,7 @@
                                 </tr>
                                 @foreach (Dish dish in Model.Dishes)
                                 {
-                                    <tr id="_@dish.Id">
+                                    <tr id="_table-row-@dish.Id">
                                         <td class="col-sm-3">
                                             @dish.Id
                                         </td>
