--- a/DeliveryOriginal/DeliveryOriginal.Admin/Views/Order/_OrderDetails.cshtml
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/Views/Order/_OrderDetails.cshtml
@@ -6,6 +6,7 @@
 <div>
     @if (Model != null)
     {
+        @Html.HiddenFor(m => m.PhoneNumber)
         <div class="details-partial">
             <div class="bordered-content clearfix" id="contentDetails">
                 <div id="detailsSection">
