--- a/DeliveryOriginal/DeliveryOriginal.Admin/Content/Site.css
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/Content/Site.css
@@ -147,6 +147,19 @@ textarea {
     width: 90px;
 }
 
+.dashboard-menu-item {
+    height: 30px;
+    width: 35px;
+    font-size: 20px;
+    color: #000000;
+    cursor: pointer;
+}
+
+.chart {
+    width: 100%;
+    min-height: 450px;
+}
+
 @media (max-width: 1200px) {
     .arrowUp-sort-icon {
         width: 95%;
@@ -168,12 +181,4 @@ textarea {
         width: 100%;
         padding: 5px 0 !important;
     }
-}
-
-.dashboard-menu-item {
-    height: 30px;
-    width: 35px;
-    font-size: 20px;
-    color: #000000;
-    cursor: pointer;
 }
