--- a/DeliveryOriginal/DeliveryOriginal.Admin/Views/User/CreateUser.cshtml
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/Views/User/CreateUser.cshtml
@@ -12,7 +12,7 @@
             @Html.AntiForgeryToken()
             <div class="row">
                 <div class="col-md-12">
-                    <h4>Edit user</h4>
+                    <h4>Create user</h4>
                     <hr>
                 </div>
             </div>
@@ -30,7 +30,7 @@
                 <div class="form-group">
                     <label class="col-md-4">Password:</label>
                     <div class="col-md-8">
-                        @Html.TextBoxFor(m => m.Password, new { @class = "form-control" })
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                     </div>
                 </div>
                 <div class="form-group">
