--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_dish_description.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_dish_description.xml
@@ -1,98 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/sheet"
     android:background="@drawable/sheet_bg"
     >
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="-126dp"
+        tools:layout_editor_absoluteY="16dp">
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
             android:id="@+id/dish_description_img"
+            android:layout_width="360dp"
+            android:layout_height="240dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dish_description_name"
+            app:layout_constraintVertical_bias="0.05" />
+
+        <TextView
+            android:id="@+id/dish_description_name"
+            android:layout_width="360dp"
+            android:layout_height="wrap_content"
+            android:scrollHorizontally="false"
+            android:text="Name"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="28sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.05"
-            app:layout_constraintHorizontal_bias="0.1"
-            />
-
-        <TextView
-            android:id="@+id/dish_description_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="12dp"
-            android:fontFamily="@font/lobster"
-            android:scrollHorizontally="false"
-            android:text="Name"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.05"
-            app:layout_constraintStart_toEndOf="@+id/dish_description_img"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.05" />
+            app:layout_constraintVertical_bias="0.03" />
 
         <TextView
             android:id="@+id/dish_description_cost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lobster"
+            android:layout_marginStart="6dp"
             android:text="Cost"
             android:textColor="@color/white"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/add_to_cart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.05"
-            app:layout_constraintStart_toEndOf="@+id/dish_description_img"
-            app:layout_constraintTop_toBottomOf="@+id/dish_description_name"
-            app:layout_constraintVertical_bias="0.06" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cost_separator"
+            app:layout_constraintVertical_bias="0.5" />
 
         <TextView
             android:id="@+id/dish_description_ingredients"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="12dp"
-            android:fontFamily="@font/lobster"
+            android:layout_height="240dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:scrollHorizontally="false"
             android:text="Ingredients"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-
+            android:textColor="#C5C6D0"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/add_to_cart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dish_description_img"
-            app:layout_constraintVertical_bias="0.05" />
+            app:layout_constraintVertical_bias="0.15" />
+
+        <View
+            android:id="@+id/cost_separator"
+            android:layout_width="360dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dish_description_ingredients" />
 
         <Button
             android:id="@+id/add_to_cart"
             android:layout_width="150dp"
             android:layout_height="50dp"
+            android:background="@drawable/button_bg"
             android:text="Add to cart"
-            android:fontFamily="@font/lobster"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.9"
-            android:background="@drawable/button_bg"
+            app:layout_constraintVertical_bias="0.97"
 
             />
 
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
