--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_main.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
             android:text="@string/log_out"
             android:layout_gravity="bottom"
             android:textAllCaps="false"
-            android:padding="15dp"
+            android:padding="10dp"
+            android:background="@color/purple_700"
             android:onClick="log_out"
             />
 
