--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_registration.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/activity_registration.xml
@@ -80,6 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="#CCCCCC"
+        android:inputType="textPassword"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:drawablePadding="19dp"
         android:hint="@string/password"
@@ -99,6 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="#CCCCCC"
+        android:inputType="textPassword"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:drawablePadding="19dp"
         android:hint="@string/repeat_password"
