--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/nav_header_main.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/nav_header_main.xml
@@ -14,8 +14,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="95dp"
-        android:layout_height="90dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@drawable/man" />
@@ -35,5 +35,6 @@
         android:layout_height="wrap_content"
         android:text="@string/nav_header_subtitle"
         android:textStyle="bold"
-        android:layout_marginLeft="11dp"/>
+        android:layout_marginLeft="11dp"
+        android:layout_marginTop="8dp"/>
 </LinearLayout>
