--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/order_item.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/res/layout/order_item.xml
@@ -18,60 +18,57 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="center"
+            android:background="@drawable/round_bg"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.05"/>
+            app:layout_constraintHorizontal_bias="0.03"/>
 
 
         <TextView
             android:id="@+id/order_name"
-            android:layout_width="wrap_content"
+            android:layout_width="210dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lobster"
             android:text="Order name"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias=".1"
             app:layout_constraintStart_toEndOf="@+id/order_image"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias=".1" />
+            app:layout_constraintVertical_bias=".1"
+            app:layout_constraintHorizontal_bias=".25"/>
 
         <TextView
             android:id="@+id/order_cost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lobster"
             android:text="Price"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias=".08"
+            app:layout_constraintHorizontal_bias=".06"
             app:layout_constraintStart_toEndOf="@+id/order_image"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias=".7" />
+            app:layout_constraintVertical_bias=".75" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
             android:id="@+id/increaseAmount"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:text="+"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            app:cornerRadius="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/custom_btn_add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.95"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias=".7" />
+            app:layout_constraintVertical_bias=".8" />
 
         <TextView
             android:id="@+id/order_amount"
@@ -79,31 +76,43 @@
             android:layout_height="wrap_content"
             android:text="3"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias=".7"
+            app:layout_constraintVertical_bias=".75"
             app:layout_constraintHorizontal_bias=".8"
-            android:fontFamily="@font/lobster"/>
+            />
+
+        <TextView
+            android:id="@+id/remove_order"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:text="X"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/order_name"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            android:textColor="@color/purple_700"
+            app:layout_constraintVertical_bias="0.1"
+            app:layout_constraintHorizontal_bias="0.6"/>
 
         <com.google.android.material.button.MaterialButton
-            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
             android:id="@+id/decreaseAmount"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:text="-"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            app:cornerRadius="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/custom_btn_remove"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias=".7" />
+            app:layout_constraintVertical_bias=".8" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
